<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/layoutLogin"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    tools:context=".ui.activity.RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleCentered="true"
            app:title="Register"
            app:titleTextColor="@android:color/black"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Title" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_medium"
        android:hint="@string/username"
        android:layout_marginStart="@dimen/padding_large"
        android:layout_marginEnd="@dimen/padding_large"
        android:textColorHint="@color/colorFormLabel"
        app:boxCornerRadiusBottomEnd="@dimen/margin_field"
        app:boxCornerRadiusBottomStart="@dimen/margin_field"
        app:boxCornerRadiusTopEnd="@dimen/margin_field"
        app:boxCornerRadiusTopStart="@dimen/margin_field"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidth="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingTop="@dimen/padding_form"
            android:paddingBottom="@dimen/padding_form" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_medium"
        android:hint="@string/email"
        android:layout_marginStart="@dimen/padding_large"
        android:layout_marginEnd="@dimen/padding_large"
        android:textColorHint="@color/colorFormLabel"
        app:boxCornerRadiusBottomEnd="@dimen/margin_field"
        app:boxCornerRadiusBottomStart="@dimen/margin_field"
        app:boxCornerRadiusTopEnd="@dimen/margin_field"
        app:boxCornerRadiusTopStart="@dimen/margin_field"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidth="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/padding_form"
            android:paddingBottom="@dimen/padding_form" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_field"
        android:hint="@string/password"
        android:layout_marginStart="@dimen/padding_large"
        android:layout_marginEnd="@dimen/padding_large"
        android:textColorHint="@color/colorFormLabel"
        app:boxCornerRadiusBottomEnd="@dimen/margin_field"
        app:boxCornerRadiusBottomStart="@dimen/margin_field"
        app:boxCornerRadiusTopEnd="@dimen/margin_field"
        app:boxCornerRadiusTopStart="@dimen/margin_field"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidth="1dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingTop="@dimen/padding_form"
            android:paddingBottom="@dimen/padding_form" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:layout_marginStart="@dimen/padding_large"
        android:layout_marginEnd="@dimen/padding_large"
        android:layout_marginTop="@dimen/padding_large"
        android:layout_marginBottom="@dimen/padding_medium"
        app:layout_constraintTop_toBottomOf="@id/layout_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8"
        app:cornerRadius="@dimen/button_corner_radius"/>

</LinearLayout>